fixed scrollbar on news feed

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -156,7 +156,23 @@ article {/* reference the article element  */
 	 -webkit-justify-content: flex-start;
     -ms-flex-pack: start;
 	justify-content: flex-start;
-	}
+}
+
+/*testing autoscroll for news */
+.flex_news_main {
+    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox; /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Chrome */
+    display: flex; /* this defines a flex container and enables flex context for all its direct children. */
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; /* make the flexible items wrap if necesarry */
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+}
+
 .flex_welcome_left{/* reference any element with the flex_welcome_left class */
 	transform: rotateY(2deg);/* add perspective */
 	}
